Update for Heroku deployment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </div>
 </body>
-
+<script scr="https://ct-merchant-test.herokuapp.com/app.bundle.js"></script>
 <script>
 
   var pickerOptions = {
