Embedded page fixed

--- a/embedded.html
+++ b/embedded.html
@@ -13,14 +13,12 @@
     }
 
 </style>
-<h1>Test</h1>
-<button id="openPicker" onclick="openPicker()" class="button">OPEN PICKER</button>
 
 <div id="container">
 
 </div>
 </body>
-<!--<script src="https://ct-merchant-test.herokuapp.com/app.bundle.js"></script>-->
+<script src="https://ct-merchant-test.herokuapp.com/app.bundle.js"></script>
 <script>
 
   var pickerOptions = {
