Added some display control options

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     pageSize: 20,
     language: "en",
     selectionMode: "single",
-    pickerMode: 'category',
+    pickerMode: "category",
     displayOptions: {
       showHeader: false,
       showPaging: false,
