Started clean up and refactoring where needed

--- a/embedded.html
+++ b/embedded.html
@@ -35,7 +35,7 @@
     pageSize: 20,
     language: "en",
     selectionMode: "single",
-    pickerMode: "category",
+    pickerMode: "product",
     displayOptions: {
       showHeader: false,
       showPaging: false,
