Added a new picker mode for Variant Selection Fixed search Language usage

--- a/index.html
+++ b/index.html
@@ -87,16 +87,17 @@
   function startPicker(type) {
     var pickerOptions = {
       project: {
-        projectKey: 'ivos-personal-project',
+        projectKey: '<key>',
         credentials: {
-          clientId: 'oKqJL3KnMTuqRJbtiBClckA4',
-          clientSecret: '8k1eE92pUdHgIMk5WrLKQSwSlSZ1bSrC'
+          clientId: '<clientid>',
+          clientSecret: '<clientsecret>'
         }
       },
       mode: 'dialog',
       pickerMode: type,
       uiLocale: "en",
       // selectionMode: "multiple",
+      searchLanguage: 'en',
       displayOptions: {
         showHeader: false,
         showCancelButton: true,
